--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('io.jsonwebtoken:jjwt:0.7.0')
 	compileOnly('org.projectlombok:lombok')
 	runtime('com.h2database:h2')
     testCompile 'io.rest-assured:rest-assured:3.0.2'
