get current user success

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.jackson.deserialization.UNWRAP_ROOT_VALUE=true
 spring.jackson.serialization.WRAP_ROOT_VALUE=true
 image.default=https://static.productionready.io/images/smiley-cyrus.jpg
-
-mybatis.config-location=mybatis-config.xml
+jwt.secret=nRvyYC4soFxBdZ-F-5Nnzz5USXstR1YylsTd-mA0aKtI9HUlriGrtkf-TiuDapkLiUCogO3JOK7kwZisrHp6wA
+jwt.sessionTime=86400
+mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=mapper/*Mapper.xml
